# criptografia

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  nginx.conf.example  opencode.json  package-lock.json  package.json  pruebacripto1.txt.scrypt  pruebacripto2.txt  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
.opencode/agent/: lead-developer.md  security-supervisor.md
.opencode/skills/securecrypt-architecture/: SKILL.md
.opencode/skills/securecrypt-crypto/: SKILL.md
.opencode/skills/securecrypt-testing/: SKILL.md
.opencode/skills/security-audit/: SKILL.md
apps/android/: .gitignore  DEVELOPMENT.md  SECURITY.md
apps/android/app/: proguard-rules.pro
apps/windows/: README.md  build.bat
apps/windows/installer/: SecureCrypt.iss
apps/windows/resources/: SecureCrypt.rc
auditoria_fase0/: 00_checklist_ejecucion.md  01_branch_y_tag.md  02_ci_hardening.md  03_test_baseline.md  04_golden_tests.md  05_adr.md  06_threat_model.md  07_supply_chain.md  08_resumen_baseline.md  README.md  npm-audit-baseline.txt
auditoria_fase1/: 01_supply_chain_cleanup.md  README.md
auditoria_fase2/: README.md
auditoria_fase3/: README.md
auditoria_fase4/: 02_cookie_csrf_dual_mode.md  README.md
criptografia-app-android/: README.md  SECURITY.md  settings.gradle.kts
criptografia-app-android/app/: build.gradle.kts
criptografia-app-windows/: .gitignore  CMakeLists.txt  PLAN_BUILD_WINDOWS.md  QUICKSTART.md  README.md  SECURITY.md  build-installer.bat
criptografia-app-windows/resources/: app.manifest
criptografia-app-windows/src/app/: AppController.cpp  AppController.h
criptografia-app-windows/src/core/crypto/: CryptoEngine.cpp  CryptoEngine.h  FileCipher.cpp  KeyManager.cpp  KeyManager.h  PasswordGenerator.cpp
criptografia-app-windows/src/core/security/: AntiDebug.cpp  ClipboardManager.cpp  ClipboardManager.h  SecureMemory.h
criptografia-app-windows/src/core/storage/: SecureDatabase.cpp  SecureDatabase.h  StorageManager.cpp  StorageManager.h
criptografia-app-windows/src/core/utils/: StringUtils.cpp  StringUtils.h
criptografia-app-windows/src/data/model/: Models.cpp  Models.h
criptografia-app-windows/src/data/repository/: DocumentRepository.cpp  DocumentRepository.h  NoteRepository.cpp  NoteRepository.h  PasswordRepository.cpp  PasswordRepository.h
criptografia-app-windows/src/ui/: MainWindow.cpp  MainWindow.h
criptografia-app-windows/src/ui/controls/: ModernButton.h  SecureInput.cpp  SecureInput.h
criptografia-app-windows/src/ui/dialogs/: AuthDialog.cpp  AuthDialog.h  DocumentDialog.h  PasswordDialog.cpp  PasswordDialog.h  SettingsDialog.cpp  SettingsDialog.h
criptografia-app-windows/tests/: CMakeLists.txt
criptografia-app-windows/tests/unit/: test_crypto.cpp
docs/: CHANGELOG.md  THREAT_MODEL.md
docs/ai/: ai-integration.md
docs/analysis/: audit.md
docs/architecture/: clean-architecture.md
docs/business/: commercial-strategy.md
docs/decisions/: 0000-template.md  0003-cpp-kdf-replacement.md  0004-cpp-streaming-aead.md  0005-server-secret-validation-and-hkdf-wrap.md  0006-strict-csp-no-unsafe-inline.md  0007-hkdf-for-file-keys.md  0008-sandbox-realpath.md  0009-picomatch-for-exclusions.md  0010-rate-limit-composite-key.md  0011-nist-password-policy.md  0012-master-hash-deprecation-plan.md  0013-require-auth-on-verify-and-progress.md  0014-change-password-endpoint.md  0015-webauthn-prf-plan.md  0016-cookie-session-plan.md  0017-vitest-4-migration.md  adr-001-kdf-unification.md  adr-002-session-auth.md
docs/roadmap/: roadmap.md
docs/security/: security-audit.md
docs/testing/: testing-strategy.md
docs/tfm/: tfm-structure.md
prueba/: des.decrypted  en.scrypt  test.docx  test.scrypt
public/: index.html
public/css/: styles.css
public/js/: app.js
scripts/: createUser.ts
src/: config.ts
src/ai/knowledge/: cryptoKnowledge.ts
src/ai/providers/: ollamaProvider.ts
src/ai/services/: configAuditor.ts  cryptoAssistant.ts  fileClassifier.ts
src/backgroundTasks/: checkpointManager.ts  pauseResumeController.ts  taskQueue.ts  taskScheduler.ts  workerPool.ts
src/cli/: cliParser.ts  cliRunner.ts  progressBar.ts
src/cli/commands/: batch.ts  config.ts  decryptDir.ts  decryptFile.ts  encryptDir.ts  encryptFile.ts  init.ts
src/core/: appConfig.ts  config.ts  constants.ts  errorHandler.ts  vault.ts
src/crypto/: cryptoUtils.ts  engine.ts  fileCipher.ts  fileDecipher.ts  keyDerivation.ts
src/database/: db.ts  sessionRepository.ts  userRepository.ts  webauthnRepository.ts
src/filesystem/: directoryProcessor.ts  fileMetadata.ts  fileScanner.ts  streamHandler.ts  systemExclusions.ts
src/passwordManager/: passwordValidator.ts  secureStorage.ts
src/utils/: logger.ts
src/web/: server.ts
src/web/middleware/: authMiddleware.ts  errorMiddleware.ts  pathSandbox.ts  requireCsrf.ts  requireSession.ts
src/web/routes/: aiRoutes.ts  apiRoutes.ts  authRoutes.ts  pageRoutes.ts  webauthnRoutes.ts
src/web/session/: cookieSession.ts  sessionStore.ts
tests/benchmarks/: exp001.ts  exp003.ts
tests/integration/: auth.test.ts  changePassword.test.ts  cookieAuth.test.ts  directoryProcessing.test.ts  fullEncryptDecrypt.test.ts  sseIsolation.test.ts
tests/regression/: format-v1-scrypt.test.ts
tests/stress/: concurrentTasks.test.ts  memoryLeak.test.ts
tests/unit/crypto/: fileCipher.test.ts  keyDerivation.test.ts
tests/unit/session/: wrapKey.test.ts  (+1 more)
tfm/: README.md
tfm/experimentos/: EXP-001_argon2id_benchmark.md  EXP-002_aes_throughput.md  EXP-003_ai_audit_accuracy.md  EXP-004_rag_retrieval_quality.md  EXP-005_security_penetration.md
tfm/memoria/: 00_portada.md  01_introduccion.md  02_estado_arte.md  03_objetivos.md  04_arquitectura.md  05_implementacion.md  06_ai_integration.md  07_seguridad.md  08_evaluacion.md  09_conclusiones.md  10_bibliografia.md
tfm/presentacion/: defensa.md  guion_video.md
(+56 files in other folders)
